# six-sines

./: .gitignore  .gitmodules  CMakeLists.txt  LIN_STANDALONE.md  MAC_STANDALONE.md  README.md  VERSION  WIN_STANDALONE.md
.github/workflows/: build-daw-plugin.yml  build-plugin.yml
cmake/: basic_installer_clapfirst.cmake  compile-options.cmake
doc/: 12_roadmap.md  ack.md  changelog.md  design.md  manual.md
doc/12_prompts/: audio_in_prompt.md  color_picker.md
libs/: CMakeLists.txt
resources/: NightlyBlurb.md  ReadmeZip.txt
resources/factory_patches/: Patches
resources/factory_patches/Bass/: ...And Jack Had A Groove!.sxsnp  A Supporting Role.sxsnp  Bass 1.sxsnp  Bass 2.sxsnp  Bass 3.sxsnp  Bass 4.sxsnp  Bass Is The Place.sxsnp  Better Lately Than Never.sxsnp  Brand New Bass.sxsnp  Butterbean.sxsnp  Charlie Blackwood.sxsnp  Classic 4op Bass.sxsnp  Deep And Low.sxsnp  Deep Fried Low End.sxsnp  Glide Bass.sxsnp  Gnorch.sxsnp  Growler.sxsnp  I Am Sweepy.sxsnp  Laughing Bass.sxsnp  Lowkey Slap.sxsnp  Neon New York.sxsnp  Polite Discourse.sxsnp  Post-Acid Bass.sxsnp  Power Through It.sxsnp  Rehab For Edgelords.sxsnp  Reso FM Bass.sxsnp  Scream Queen.sxsnp  Silversmith.sxsnp  Soft Bass.sxsnp  Soft Landing.sxsnp  Squeaky Clean.sxsnp  Sub Bass.sxsnp  Substrata.sxsnp  The Zone of Fat.sxsnp  This is not an 8-bit Bass.sxsnp  Warrior Macros.sxsnp  You Got Nothin On This.sxsnp
resources/factory_patches/Bells/: Bellotar.sxsnp  Console Tones.sxsnp  Detuned Metal.sxsnp  ED2-10 Iso-2 Bells.sxsnp  ED2-11 Iso-2 Bells.sxsnp  ED2-12 Iso-2 Bells.sxsnp  ED2-13 Iso-2 Bells.sxsnp  ED2-23 Iso-2 Bells.sxsnp  ED2-5 Iso-2 Bells.sxsnp  ED2-6 Iso-2 Bells.sxsnp  ED2-7 Iso-2 Bells.sxsnp  ED2-8 Iso-2 Bells.sxsnp  ED2-9 Iso-2 Bells.sxsnp  Five Primes Bell.sxsnp  Inharmomen.sxsnp  Iso-Bells 5.sxsnp  Iso-Bells 6.sxsnp  Mirage Bell.sxsnp  Odd-Bells 7.sxsnp
resources/factory_patches/Drums/: Hihat Closed.sxsnp  Hihat.sxsnp  Kick.sxsnp  Metal Percussion.sxsnp  Snare Short.sxsnp
resources/factory_patches/Effects/: A Marching Chorus of Bees.sxsnp  Klaxon Feedback.sxsnp  Mothership.sxsnp  Noisines.sxsnp  Pulsator.sxsnp  Putting Out Fires.sxsnp  Rave Implosion.sxsnp  Reboot Sequence.sxsnp  Reverse Tech.sxsnp  Rhythm Blender.sxsnp  Rocket Tom.sxsnp  The Big Fuss II.sxsnp  The Big Fuss.sxsnp  Vacuum.sxsnp  Water Drop.sxsnp  Wind.sxsnp  You Are Breaking Up.sxsnp  Zapper.sxsnp
resources/factory_patches/Guitar/: Muted Strat.sxsnp
resources/factory_patches/Keys/: Afterschool Special.sxsnp  Arpeggiator Food.sxsnp  Bright and Synthy.sxsnp  EP 3.sxsnp  EP 4.sxsnp  EP to Organ.sxsnp  EPianotar.sxsnp  Eat Your Greens.sxsnp  Fat Key Stack 2.sxsnp  Fat Key Stack.sxsnp  Fuzzbox.sxsnp  Hello Supersaw.sxsnp  HelloSupersaw.sxsnp  Iconoclasm.sxsnp  Moving Glass Organ.sxsnp  Nostalgic Bell Synth.sxsnp  Organ.sxsnp  Out With The New.sxsnp  Retrofuture Brass.sxsnp  Sow Some Seeds.sxsnp  Stack Operator.sxsnp  Surge DX Piano Port.sxsnp  UpDown Funker.sxsnp
resources/factory_patches/Leads/: Active Radar.sxsnp  Airlock.sxsnp  Almost A Saw.sxsnp  Asteroid Destroyed.sxsnp  Memento Vivere.sxsnp  Plucky.sxsnp  Prog Jazzer.sxsnp  Rounded PWM.sxsnp  Rounded Sync 2.sxsnp  Rounded Sync 3.sxsnp  Rounded Sync.sxsnp  Rounded Sync2.sxsnp  Rounded Sync3.sxsnp  Sorta Super Saw.sxsnp  Teknophilia.sxsnp  Whissle.sxsnp
resources/factory_patches/MPE/: Exp Bowed Glass.sxsnp  Exp Bowing 1.sxsnp  Exp Bowing 2.sxsnp  Exp Reeds.sxsnp  Exp Slow Primes.sxsnp
resources/factory_patches/Mallets/: Bubblegum Marimba.sxsnp  CPS Bells.sxsnp  Marimbell.sxsnp
resources/factory_patches/Pads/: Bag of Bells in the Next Room.sxsnp  Beauty Grit.sxsnp  Borgus.sxsnp  Brassy Noise.sxsnp  Conscious Vibrations.sxsnp  Crystal Blue.sxsnp  Daughter of FloatChime.sxsnp  Death From Below.sxsnp  Fake Fantasy.sxsnp  Furbaby.sxsnp  Holding Pattern.sxsnp  Hope Evolution.sxsnp  OST Pad.sxsnp  PD Brass.sxsnp  Pictures of Nebulas.sxsnp  Subtle Starlight.sxsnp  The Sixth Element.sxsnp  We are Not Alone.sxsnp
resources/factory_patches/Percussion/: Chroma Perc.sxsnp  (+2 more)
resources/factory_themes/: Dark.sixtheme  Light.sixtheme
scripts/: fix_file_comments.pl  fix_header_guards.pl
src/: RIFFWavWriter.h  configuration.h  main.cpp  sintable.h
src/clap/: ifm-clap-entry-impl.cpp  ifm-clap-entry-impl.h  ifm-clap-entry.cpp  ifm-clap.cpp  preset-discovery-impl.cpp  preset-discovery-impl.h  six-sines-clap-entry-impl.cpp  six-sines-clap-entry-impl.h  six-sines-clap-entry.cpp  six-sines-clap.cpp
src/dsp/: macro_node.h  matrix_node.h  node_support.h  noise_helper.h  op_source.h  remap_functions.h  resonant_window.h  sintable.cpp  sintable.h  sr_provider.h
src/infra/: RIFFWavWriter.h
src/presets/: preset-manager.cpp  preset-manager.h  ui-theme-manager.cpp  ui-theme-manager.h
src/synth/: macro_usage.cpp  macro_usage.h  matrix_index.h  mod_matrix.cpp  mod_matrix.h  mono_values.h  patch.cpp  patch.h  preset-manager.cpp  preset-manager.h  synth.cpp  synth.h  voice.cpp  voice.h  voice_values.h
src/ui/: clipboard.cpp  clipboard.h  dahdsr-components.h  finetune-sub-panel.cpp  finetune-sub-panel.h  ifm-editor.cpp  ifm-editor.h  juce-lnf.h  knob-highlight.h  lfo-components.h  macro-panel.cpp  macro-panel.h  macro-sub-panel.cpp  macro-sub-panel.h  main-panel.cpp  main-panel.h  main-sub-panel.cpp  main-sub-panel.h  mainpan-sub-panel.cpp  mainpan-sub-panel.h  matrix-panel.cpp  matrix-panel.h  matrix-sub-panel.cpp  matrix-sub-panel.h  mixer-panel.cpp  mixer-panel.h  mixer-sub-panel.cpp  mixer-sub-panel.h  modulation-components.h  patch-continuous.h  patch-data-bindings.h  playmode-sub-panel.cpp  playmode-sub-panel.h  preset-data-binding.h  preset-manager.cpp  preset-manager.h  ruled-label.h  segmented-ratio-editor.cpp  segmented-ratio-editor.h  self-sub-panel.cpp  (+16 more)
tests/: CMakeLists.txt  factory_patches.cpp  mpe_smoothing.cpp  output_stage_dsp.cpp  perf_main.cpp  perf_scenarios.cpp  perf_timing.h  structure.cpp  test_main.cpp
tests/perf/: .gitignore  PERFORMANCE_TESTS.md  diff.sh  run.sh
tests/perf/results/: baseline-item-1.csv  baseline-macOS-pwlaptop-a305a2a66df.csv
(+8 files in other folders)
